--- a/indextoslides2.html
+++ b/indextoslides2.html
@@ -1441,7 +1441,7 @@ MSE = \sum_{i=1}^{p} (\hat{\beta}_i - \beta_i)^2 \tag{3}
 <li>AUC conveys how well a model can differentiate between different classes, and it is preferable to other metrics, such as accuracy <span class="citation" data-cites="cantor2000determining">(<a href="#/references" role="doc-biblioref" onclick>Cantor and Kattan 2000</a>)</span>.</li>
 <li>AUC scores can range from 0 to 1</li>
 </ul>
-<p>Figure 2 and Formula 4 demonstrate how AUC uses the positive and negative outcomes to calculate a value that indicates the probability of a positive result ranking higher than negative results, where <span class="math inline">\(S_p\)</span> is the total number of positive outcomes ranked, and <span class="math inline">\(n_p\)</span> and <span class="math inline">\(n_n\)</span> are the number of positive and negative outcomes, respectively <span class="citation" data-cites="hossin2015review">(<a href="#/references" role="doc-biblioref" onclick>Hossin and Sulaiman 2015</a>)</span>.</p>
+<p>Formula 4 demonstrate how AUC uses the positive and negative outcomes to calculate a value that indicates the probability of a positive result ranking higher than negative results, where <span class="math inline">\(S_p\)</span> is the total number of positive outcomes ranked, and <span class="math inline">\(n_p\)</span> and <span class="math inline">\(n_n\)</span> are the number of positive and negative outcomes, respectively <span class="citation" data-cites="hossin2015review">(<a href="#/references" role="doc-biblioref" onclick>Hossin and Sulaiman 2015</a>)</span>.</p>
 </div><div class="column" style="width:&quot;50%;">
 <p><span class="math display">\[
 AUC = \frac{S_p-n_p(n_n+1)/2}{n_pn_n} \tag{4}
@@ -1664,7 +1664,7 @@ AUC = \frac{S_p-n_p(n_n+1)/2}{n_pn_n} \tag{4}
 </div><div class="column" style="width:30%;">
 <ul>
 <li>Boxplots for our continuous variables were created in our exploratory analysis to evaluate if any variables have outliers that need to be addressed.</li>
-<li>However, these data points will remain untouched for our analysis as they do not appear to be recording errors. The outliers in the boxplots appear to be genuine observations and should be considered in our model.</li>
+<li>However, these data points will remain untouched for our analysis as they appear to be genuine observations and should be considered in our model.</li>
 </ul>
 </div>
 </div>
